exlusive pages are almost done

--- a/dm.html
+++ b/dm.html
@@ -40,6 +40,7 @@
 
     <!-- Main CSS File -->
     <link href="assets/css/main.css" rel="stylesheet" />
+    <link rel="stylesheet" href="assets/css/dm.css">
 
     <!-- =======================================================
   * Template Name: Strategy
@@ -75,10 +76,10 @@
             <li><a href="portfolio-details.html">Portfolio</a></li>
             <li><a href="#team">Team</a></li>
             <li><a href="contact-us.html">Contact</a></li>
-            <li><a href="privacy-policy.html">Privacy Policy</a></li>
+            <!-- <li><a href="privacy-policy.html">Privacy Policy</a></li>
             <li>
               <a href="terms-and-conditions.html">Terms and Conditions</a>
-            </li>
+            </li> -->
           </ul>
           <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
         </nav>
@@ -94,28 +95,111 @@
         role="tabpanel"
         aria-labelledby="digital-marketing-tab"
       >
-        <div class="row">
-          <div class="col-md-6">
-            <div class="content-block">
-              <h3>Strategic Digital Marketing</h3>
-              <p>
-                Boost your online presence with our tailored digital marketing
-                strategies, designed to engage your audience and drive results.
-              </p>
-              <p>
-                We leverage advanced tools and analytics to optimize campaigns
-                across social media, email, and more.
-              </p>
+        <section class="service-hero py-5 bg-light text-center">
+          <div class="container">
+            <h1 class="display-5 fw-bold mb-3">Digital Marketing Services</h1>
+            <p class="lead mb-4">
+              Supercharge your brand's online presence with our data-driven digital
+              marketing solutions. We help you reach, engage, and convert your ideal
+              audience through innovative strategies tailored to your business
+              goals.
+            </p>
+            <div class="row justify-content-center mb-4">
+              <div class="col-lg-8">
+                <p>
+                  Our digital marketing team specializes in creating campaigns that
+                  deliver measurable results. From social media management and
+                  content creation to paid advertising and analytics, we use the
+                  latest tools and trends to maximize your ROI. Whether you're a
+                  startup or an established business, our flexible packages are
+                  designed to fit your needs and budget.
+                </p>
+                <ul
+                  class="text-start mx-auto"
+                  style="max-width: 600px; list-style-type: disc"
+                >
+                  <li>
+                    <b>Social Media Management:</b> Grow your audience and build
+                    brand loyalty with creative, consistent content.
+                  </li>
+                  <li>
+                    <b>Email Marketing:</b> Nurture leads and boost conversions with
+                    targeted, personalized campaigns.
+                  </li>
+                  <li>
+                    <b>Paid Advertising:</b> Reach new customers fast with expertly
+                    managed Google, Facebook, and Instagram ads.
+                  </li>
+                  <li>
+                    <b>Analytics & Reporting:</b> Make data-driven decisions with
+                    transparent, actionable insights.
+                  </li>
+                </ul>
+              </div>
             </div>
           </div>
-          <div class="col-md-6">
-            <img
-              src="https://images.unsplash.com/photo-1557838923-2985c318be48?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8ZGlnaXRhbCUyMG1hcmtldGluZ3xlbnwwfHwwfHx8MA%3D%3D"
-              alt="Digital Marketing"
-              class="img-fluid rounded"
-            />
+        </section>
+        <section class="packages-section py-5">
+          <div class="container">
+            <h2 class="text-center mb-5">Digital Marketing Packages</h2>
+            <div class="row g-4 justify-content-center">
+              <!-- Basic Package -->
+              <div class="col-md-4">
+                <div class="card h-100 shadow package-card border-primary">
+                  <div class="card-body text-center">
+                    <h3 class="card-title">Basic</h3>
+                    <h4 class="card-price text-primary mb-3"
+                      >$199<span class="fs-6">/mo</span
+                    ></h4>
+                    <ul class="list-unstyled mb-4">
+                      <li><i class="bi bi-check-circle text-success"></i> 2 Social Media Platforms</li>
+                      <li><i class="bi bi-check-circle text-success"></i> 4 Posts/Month</li>
+                      <li><i class="bi bi-check-circle text-success"></i> Monthly Analytics Report</li>
+                    </ul>
+                    <a href="contact.html" class="btn btn-primary">Get Started</a>
+                  </div>
+                </div>
+              </div>
+              <!-- Standard Package -->
+              <div class="col-md-4">
+                <div class="card h-100 shadow package-card border-success">
+                  <div class="card-body text-center">
+                    <h3 class="card-title">Standard</h3>
+                    <h4 class="card-price text-success mb-3"
+                      >$399<span class="fs-6">/mo</span
+                    ></h4>
+                    <ul class="list-unstyled mb-4">
+                      <li><i class="bi bi-check-circle text-success"></i> 4 Social Media Platforms</li>
+                      <li><i class="bi bi-check-circle text-success"></i> 12 Posts/Month</li>
+                      <li><i class="bi bi-check-circle text-success"></i> Email Marketing</li>
+                      <li><i class="bi bi-check-circle text-success"></i> Paid Ad Management</li>
+                    </ul>
+                    <a href="contact.html" class="btn btn-success">Get Started</a>
+                  </div>
+                </div>
+              </div>
+              <!-- Premium Package -->
+              <div class="col-md-4">
+                <div class="card h-100 shadow package-card border-warning">
+                  <div class="card-body text-center">
+                    <h3 class="card-title">Premium</h3>
+                    <h4 class="card-price text-warning mb-3"
+                      >$699<span class="fs-6">/mo</span
+                    ></h4>
+                    <ul class="list-unstyled mb-4">
+                      <li><i class="bi bi-check-circle text-success"></i> All Platforms</li>
+                      <li><i class="bi bi-check-circle text-success"></i> 30+ Posts/Month</li>
+                      <li><i class="bi bi-check-circle text-success"></i> Advanced Analytics</li>
+                      <li><i class="bi bi-check-circle text-success"></i> Dedicated Account Manager</li>
+                      <li><i class="bi bi-check-circle text-success"></i> Custom Campaigns</li>
+                    </ul>
+                    <a href="contact.html" class="btn btn-warning text-white">Get Started</a>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
-        </div>
+        </section>
         <div class="process-timeline mt-4">
           <div class="timeline-item">
             <div class="timeline-marker">01</div>
@@ -148,6 +232,7 @@
           </ul>
         </div>
       </div>
+
     </main>
 
     <footer id="footer" class="footer">
