--- a/seo.html
+++ b/seo.html
@@ -40,6 +40,7 @@
 
     <!-- Main CSS File -->
     <link href="assets/css/main.css" rel="stylesheet" />
+    <link rel="stylesheet" href="assets/css/seo.css">
 
     <!-- =======================================================
   * Template Name: Strategy
@@ -75,10 +76,10 @@
             <li><a href="portfolio-details.html">Portfolio</a></li>
             <li><a href="#team">Team</a></li>
             <li><a href="contact-us.html">Contact</a></li>
-            <li><a href="privacy-policy.html">Privacy Policy</a></li>
+            <!-- <li><a href="privacy-policy.html">Privacy Policy</a></li>
             <li>
               <a href="terms-and-conditions.html">Terms and Conditions</a>
-            </li>
+            </li> -->
           </ul>
           <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
         </nav>
@@ -88,35 +89,114 @@
     </header>
 
     <main class="main">
-      <!-- SEO -->
-      <div
-        class="tab-pane fade"
-        id="service-tab-4"
-        role="tabpanel"
-        aria-labelledby="seo-tab"
-      >
-        <div class="row">
-          <div class="col-md-6">
-            <div class="content-block">
-              <h3>Effective SEO Services</h3>
-              <p>
-                Enhance your search engine rankings with our proven SEO
-                techniques.
-              </p>
-              <p>
-                We optimize content and technical aspects to drive organic
-                traffic.
-              </p>
+      <div class="tab-pane fade" id="service-tab-4" role="tabpanel" aria-labelledby="seo-tab">
+        <!-- Hero Section -->
+        <section class="service-hero py-5 bg-light text-center">
+          <div class="container">
+            <h1 class="display-5 fw-bold mb-3">SEO Services</h1>
+            <p class="lead mb-4">
+              Boost your website's visibility and attract more organic traffic with
+              our expert SEO solutions. We use proven strategies to help you rank
+              higher, reach your audience, and grow your business online.
+            </p>
+            <div class="row justify-content-center mb-4">
+              <div class="col-lg-8">
+                <p>
+                  Our SEO experts use the latest techniques to improve your search
+                  engine rankings and drive qualified traffic to your site. From
+                  keyword research and on-page optimization to technical SEO and
+                  link building, we offer comprehensive solutions for sustainable
+                  growth.
+                </p>
+                <ul
+                  class="text-start mx-auto"
+                  style="max-width: 600px"
+                >
+                  <li>
+                    <b>Keyword Research:</b> Find the best keywords to target your
+                    ideal customers.
+                  </li>
+                  <li>
+                    <b>On-Page Optimization:</b> Improve your site's content,
+                    structure, and meta tags for better rankings.
+                  </li>
+                  <li>
+                    <b>Link Building:</b> Earn high-quality backlinks to boost your
+                    site's authority.
+                  </li>
+                  <li>
+                    <b>Technical SEO:</b> Fix site issues and enhance performance
+                    for search engines and users.
+                  </li>
+                </ul>
+              </div>
             </div>
           </div>
-          <div class="col-md-6">
-            <img
-              src="https://plus.unsplash.com/premium_photo-1683980578016-a1f980719ec2?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OXx8c2VvfGVufDB8fDB8fHww"
-              alt="SEO"
-              class="img-fluid rounded"
-            />
+        </section>
+
+        <!-- SEO Packages Section -->
+        <section class="packages-section py-5">
+          <div class="container">
+            <h2 class="text-center mb-5">SEO Packages</h2>
+            <div class="row g-4 justify-content-center">
+              <!-- Basic Package -->
+              <div class="col-md-4">
+                <div class="card h-100 shadow package-card border-primary">
+                  <div class="card-body text-center">
+                    <h3 class="card-title">Basic</h3>
+                    <h4 class="card-price text-primary mb-3"
+                      >$299<span class="fs-6">/mo</span
+                    ></h4>
+                    <ul class="list-unstyled mb-4">
+                      <li><i class="bi bi-check-circle text-success"></i> 5 Keywords</li>
+                      <li><i class="bi bi-check-circle text-success"></i> On-Page SEO</li>
+                      <li><i class="bi bi-check-circle text-success"></i> Monthly Report</li>
+                    </ul>
+                    <a href="contact.html" class="btn btn-primary">Get Started</a>
+                  </div>
+                </div>
+              </div>
+              <!-- Standard Package -->
+              <div class="col-md-4">
+                <div class="card h-100 shadow package-card border-success">
+                  <div class="card-body text-center">
+                    <h3 class="card-title">Standard</h3>
+                    <h4 class="card-price text-success mb-3"
+                      >$599<span class="fs-6">/mo</span
+                    ></h4>
+                    <ul class="list-unstyled mb-4">
+                      <li><i class="bi bi-check-circle text-success"></i> 15 Keywords</li>
+                      <li><i class="bi bi-check-circle text-success"></i> On & Off-Page SEO</li>
+                      <li><i class="bi bi-check-circle text-success"></i> Link Building</li>
+                      <li><i class="bi bi-check-circle text-success"></i> Bi-Weekly Report</li>
+                    </ul>
+                    <a href="contact.html" class="btn btn-success">Get Started</a>
+                  </div>
+                </div>
+              </div>
+              <!-- Premium Package -->
+              <div class="col-md-4">
+                <div class="card h-100 shadow package-card border-warning">
+                  <div class="card-body text-center">
+                    <h3 class="card-title">Premium</h3>
+                    <h4 class="card-price text-warning mb-3"
+                      >$1199<span class="fs-6">/mo</span
+                    ></h4>
+                    <ul class="list-unstyled mb-4">
+                      <li><i class="bi bi-check-circle text-success"></i> 30+ Keywords</li>
+                      <li><i class="bi bi-check-circle text-success"></i> Full SEO Audit</li>
+                      <li><i class="bi bi-check-circle text-success"></i> Technical SEO</li>
+                      <li><i class="bi bi-check-circle text-success"></i> Weekly Report</li>
+                      <li><i class="bi bi-check-circle text-success"></i> Dedicated SEO Manager</li>
+                    </ul>
+                    <a href="contact.html" class="btn btn-warning text-white">Get Started</a>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
-        </div>
+        </section>
+
         <div class="process-timeline mt-4">
           <div class="timeline-item">
             <div class="timeline-marker">01</div>
