--- a/service-details.html
+++ b/service-details.html
@@ -81,11 +81,7 @@
               <h3>Digital Marketing</h3>
               <img src="https://images.unsplash.com/photo-1557838923-2985c318be48?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8ZGlnaXRhbCUyMG1hcmtldGluZ3xlbnwwfHwwfHx8MA%3D%3D" alt="Digital Marketing" class="img-fluid rounded mb-3">
               <p>Boost your online presence with tailored digital marketing strategies, engaging your audience and driving results across social media, email, and more.</p>
-              <!-- <ul class="service-features">
-                <li>Brand Awareness</li>
-                <li>Engagement</li>
-                <li>Lead Generation</li>
-              </ul> -->
+              <a href="dm.html" class="btn btn-outline-primary btn-sm mt-2">Learn More</a>
             </div>
           </div>
           <!-- Graphic Designing Card -->
@@ -95,11 +91,7 @@
               <h3>Graphic Designing</h3>
               <img src="https://plus.unsplash.com/premium_photo-1663100678842-d89cb7b084ee?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8Z3JhcGhpY3MlMjBkZXNpZ25pbmd8ZW58MHx8MHx8fDA%3D" alt="Graphic Designing" class="img-fluid rounded mb-3">
               <p>Transform your brand with stunning visuals, from logos to marketing materials, crafted by our expert designers to captivate and convert.</p>
-              <!-- <ul class="service-features">
-                <li>Brand Identity</li>
-                <li>Professional Visuals</li>
-                <li>Marketing Collateral</li>
-              </ul> -->
+              <a href="gd.html" class="btn btn-outline-primary btn-sm mt-2">Learn More</a>
             </div>
           </div>
           <!-- Web Development Card -->
@@ -109,25 +101,17 @@
               <h3>Web Development</h3>
               <img src="https://images.unsplash.com/photo-1571171637578-41bc2dd41cd2?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTF8fHdlYiUyMGRldmVsb3BtZW50fGVufDB8fDB8fHww" alt="Web Development" class="img-fluid rounded mb-3">
               <p>Build responsive, high-performance websites and web apps with seamless user experiences and robust functionality.</p>
-              <!-- <ul class="service-features">
-                <li>Responsive Design</li>
-                <li>Performance</li>
-                <li>Scalability</li>
-              </ul> -->
+              <a href="web.html" class="btn btn-outline-primary btn-sm mt-2">Learn More</a>
             </div>
           </div>
           <!-- SEO Card -->
           <div class="col-lg-3 col-md-6">
             <div class="service-card">
               <div class="service-icon"><i class="bi bi-search"></i></div>
-              <h3>Search Engine Optimization</h3>
+              <h3>Search Engine Optimization </h3>
               <img src="https://plus.unsplash.com/premium_photo-1683980578016-a1f980719ec2?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OXx8c2VvfGVufDB8fDB8fHww" alt="SEO" class="img-fluid rounded mb-3">
               <p>Enhance your search engine rankings and drive organic traffic with proven SEO techniques and content optimization.</p>
-              <!-- <ul class="service-features">
-                <li>Keyword Research</li>
-                <li>On-Page Optimization</li>
-                <li>Link Building</li>
-              </ul> -->
+              <a href="seo.html" class="btn btn-outline-primary btn-sm mt-2">Learn More</a>
             </div>
           </div>
         </div>
@@ -190,6 +174,12 @@
       <p>© 2025 Your Software House. All Rights Reserved</p>
     </div>
   </footer>
+
+  <!-- Floating Contact Buttons -->
+  <div class="floating-contact-buttons">
+    <a href="https://wa.me/923031234567" target="_blank" title="Chat on WhatsApp"><i class="bi bi-whatsapp"></i></a>
+    <a href="tel:+923031234567" class="phone-btn" title="Call Us"><i class="bi bi-telephone"></i></a>
+  </div>
 
   <!-- Scroll Top -->
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
