--- a/web.html
+++ b/web.html
@@ -26,6 +26,7 @@
 
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
+  <link rel="stylesheet" href="assets/css/web.css">
 
   <!-- =======================================================
   * Template Name: Strategy
@@ -52,8 +53,8 @@
           <li><a href="portfolio-details.html">Portfolio</a></li>
           <li><a href="#team">Team</a></li>
           <li><a href="contact-us.html">Contact</a></li>
-          <li><a href="privacy-policy.html">Privacy Policy</a></li>
-          <li><a href="terms-and-conditions.html">Terms and Conditions</a></li>
+          <!-- <li><a href="privacy-policy.html">Privacy Policy</a></li>
+          <li><a href="terms-and-conditions.html">Terms and Conditions</a></li> -->
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
@@ -63,52 +64,110 @@
   </header>
 
   <main class="main">
- <!-- Web Development -->
-                  <div class="tab-pane fade" id="service-tab-3" role="tabpanel" aria-labelledby="web-development-tab">
-                    <div class="row">
-                      <div class="col-md-6">
-                        <div class="content-block">
-                          <h3>Innovative Web Development</h3>
-                          <p>Build responsive, high-performance websites with our cutting-edge development services.</p>
-                          <p>We ensure seamless user experiences and robust functionality.</p>
-                        </div>
-                      </div>
-                      <div class="col-md-6">
-                        <img src="https://images.unsplash.com/photo-1571171637578-41bc2dd41cd2?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTF8fHdlYiUyMGRldmVsb3BtZW50fGVufDB8fDB8fHww" alt="Web Development" class="img-fluid rounded">
-                      </div>
-                    </div>
-                    <div class="process-timeline mt-4">
-                      <div class="timeline-item">
-                        <div class="timeline-marker">01</div>
-                        <div class="timeline-content">
-                          <h4>Planning & Design</h4>
-                          <p>Outline structure and create wireframes.</p>
-                        </div>
-                      </div>
-                      <div class="timeline-item">
-                        <div class="timeline-marker">02</div>
-                        <div class="timeline-content">
-                          <h4>Development</h4>
-                          <p>Code and integrate features with modern technologies.</p>
-                        </div>
-                      </div>
-                      <div class="timeline-item">
-                        <div class="timeline-marker">03</div>
-                        <div class="timeline-content">
-                          <h4>Testing & Launch</h4>
-                          <p>Ensure quality and deploy the site live.</p>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="benefits mt-4">
-                      <h4>Benefits</h4>
-                      <ul>
-                        <li>Responsive design</li>
-                        <li>Improved site performance</li>
-                        <li>Scalable solutions</li>
-                      </ul>
-                    </div>
-                  </div>
+    <div class="tab-pane fade" id="service-tab-3" role="tabpanel" aria-labelledby="web-development-tab">
+      <section class="service-hero py-5 bg-light text-center">
+        <div class="container">
+          <h1 class="display-5 fw-bold mb-3">Web Development Services</h1>
+          <p class="lead mb-4">Transform your business with high-performance, scalable, and visually stunning websites. Our expert developers build custom solutions that deliver seamless user experiences and drive results.</p>
+          <div class="row justify-content-center mb-4">
+            <div class="col-lg-8">
+              <p>We create websites that are not only beautiful but also functional and optimized for performance. Our process covers everything from planning and design to development, testing, and launch. Whether you need a simple landing page or a complex web application, we deliver solutions that grow with your business.</p>
+              <ul class="text-start mx-auto" style="max-width: 600px;">
+                <li><b>Responsive Websites:</b> Your site will look and work perfectly on every device.</li>
+                <li><b>E-Commerce Solutions:</b> Sell online with secure, scalable, and user-friendly stores.</li>
+                <li><b>Web Applications:</b> Custom apps tailored to your unique business needs.</li>
+                <li><b>Maintenance & Support:</b> Ongoing care to keep your site secure, fast, and up-to-date.</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="packages-section py-5">
+        <div class="container">
+          <h2 class="text-center mb-5">Web Development Packages</h2>
+          <div class="row g-4 justify-content-center">
+            <!-- Basic Package -->
+            <div class="col-md-4">
+              <div class="card h-100 shadow package-card border-primary">
+                <div class="card-body text-center">
+                  <h3 class="card-title">Basic</h3>
+                  <h4 class="card-price text-primary mb-3">$499<span class="fs-6">/project</span></h4>
+                  <ul class="list-unstyled mb-4">
+                    <li><i class="bi bi-check-circle text-success"></i> 1-3 Pages Website</li>
+                    <li><i class="bi bi-check-circle text-success"></i> Mobile Responsive</li>
+                    <li><i class="bi bi-check-circle text-success"></i> Basic SEO Setup</li>
+                  </ul>
+                  <a href="contact.html" class="btn btn-primary">Get Started</a>
+                </div>
+              </div>
+            </div>
+            <!-- Standard Package -->
+            <div class="col-md-4">
+              <div class="card h-100 shadow package-card border-success">
+                <div class="card-body text-center">
+                  <h3 class="card-title">Standard</h3>
+                  <h4 class="card-price text-success mb-3">$999<span class="fs-6">/project</span></h4>
+                  <ul class="list-unstyled mb-4">
+                    <li><i class="bi bi-check-circle text-success"></i> Up to 10 Pages</li>
+                    <li><i class="bi bi-check-circle text-success"></i> Contact Form</li>
+                    <li><i class="bi bi-check-circle text-success"></i> Blog Integration</li>
+                    <li><i class="bi bi-check-circle text-success"></i> Enhanced SEO</li>
+                  </ul>
+                  <a href="contact.html" class="btn btn-success">Get Started</a>
+                </div>
+              </div>
+            </div>
+            <!-- Premium Package -->
+            <div class="col-md-4">
+              <div class="card h-100 shadow package-card border-warning">
+                <div class="card-body text-center">
+                  <h3 class="card-title">Premium</h3>
+                  <h4 class="card-price text-warning mb-3">$1999<span class="fs-6">/project</span></h4>
+                  <ul class="list-unstyled mb-4">
+                    <li><i class="bi bi-check-circle text-success"></i> Unlimited Pages</li>
+                    <li><i class="bi bi-check-circle text-success"></i> E-Commerce Functionality</li>
+                    <li><i class="bi bi-check-circle text-success"></i> Custom Integrations</li>
+                    <li><i class="bi bi-check-circle text-success"></i> Priority Support</li>
+                  </ul>
+                  <a href="contact.html" class="btn btn-warning text-white">Get Started</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <div class="process-timeline mt-4">
+        <div class="timeline-item">
+          <div class="timeline-marker">01</div>
+          <div class="timeline-content">
+            <h4>Planning & Design</h4>
+            <p>Outline structure and create wireframes.</p>
+          </div>
+        </div>
+        <div class="timeline-item">
+          <div class="timeline-marker">02</div>
+          <div class="timeline-content">
+            <h4>Development</h4>
+            <p>Code and integrate features with modern technologies.</p>
+          </div>
+        </div>
+        <div class="timeline-item">
+          <div class="timeline-marker">03</div>
+          <div class="timeline-content">
+            <h4>Testing & Launch</h4>
+            <p>Ensure quality and deploy the site live.</p>
+          </div>
+        </div>
+      </div>
+      <div class="benefits mt-4">
+        <h4>Benefits</h4>
+        <ul>
+          <li>Responsive design</li>
+          <li>Improved site performance</li>
+          <li>Scalable solutions</li>
+        </ul>
+      </div>
+    </div>
 
   </main>
 
@@ -166,6 +225,12 @@
       </div>
     </div>
   </footer>
+
+  <!-- Floating Contact Buttons -->
+  <div class="floating-contact-buttons">
+    <a href="https://wa.me/923031234567" target="_blank" title="Chat on WhatsApp"><i class="bi bi-whatsapp"></i></a>
+    <a href="tel:+923031234567" class="phone-btn" title="Call Us"><i class="bi bi-telephone"></i></a>
+  </div>
 
   <!-- Scroll Top -->
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
