--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -211,6 +211,12 @@
     </div>
   </footer>
 
+  <!-- Floating Contact Buttons -->
+  <div class="floating-contact-buttons">
+    <a href="https://wa.me/923031234567" target="_blank" title="Chat on WhatsApp"><i class="bi bi-whatsapp"></i></a>
+    <a href="tel:+923031234567" class="phone-btn" title="Call Us"><i class="bi bi-telephone"></i></a>
+  </div>
+
   <!-- Scroll Top -->
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
