--- a/terms.html
+++ b/terms.html
@@ -52,8 +52,8 @@
           <li><a href="portfolio-details.html">Portfolio</a></li>
           <li><a href="#team">Team</a></li>
           <li><a href="contact-us.html">Contact</a></li>
-          <li><a href="privacy-policy.html">Privacy Policy</a></li>
-          <li><a href="terms.html" class="active">Terms and Conditions</a></li>
+          <!-- <li><a href="privacy-policy.html">Privacy Policy</a></li>
+          <li><a href="terms.html" class="active">Terms and Conditions</a></li> -->
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
@@ -215,6 +215,12 @@
       </div>
     </div>
   </footer>
+
+  <!-- Floating Contact Buttons -->
+  <div class="floating-contact-buttons">
+    <a href="https://wa.me/923031234567" target="_blank" title="Chat on WhatsApp"><i class="bi bi-whatsapp"></i></a>
+    <a href="tel:+923031234567" class="phone-btn" title="Call Us"><i class="bi bi-telephone"></i></a>
+  </div>
 
   <!-- Scroll Top -->
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
