--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -154,14 +154,16 @@
 
   </main>
 
-  <footer id="footer" class="footer">
+ <footer id="footer" class="footer">
+
     <div class="container footer-top">
       <div class="row gy-4">
         <div class="col-lg-5 col-md-12 footer-about">
           <a href="index.html" class="logo d-flex align-items-center">
-            <span class="sitename">Digital Transformation Company Pakistan</span>
+<img src="assets/img/dtcpak logo.png" alt="Your Software House Logo" class="img-fluid" style="max-height: 100px; width: auto;">      </a>
+
           </a>
-          <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies darta donna mare fermentum iaculis eu non diam phasellus.</p>
+          <p>We are a leading software house specializing in digital marketing, web development, graphic designing, and SEO services to help businesses succeed in the digital world.</p>
           <div class="social-links d-flex mt-4">
             <a href=""><i class="bi bi-twitter-x"></i></a>
             <a href=""><i class="bi bi-facebook"></i></a>
@@ -173,43 +175,45 @@
         <div class="col-lg-2 col-6 footer-links">
           <h4>Useful Links</h4>
           <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="#hero">Home</a></li>
             <li><a href="#about">About us</a></li>
-            <li><a href="service-details.html">Services</a></li>
-            <li><a href="portfolio-details.html">Portfolio</a></li>
-            <li><a href="privacy-policy.html">Privacy Policy</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="#contact">Contact</a></li>
           </ul>
         </div>
 
         <div class="col-lg-2 col-6 footer-links">
           <h4>Our Services</h4>
           <ul>
-            <li><a href="service-details.html">Web Development</a></li>
-            <li><a href="service-details.html">Digital Marketing</a></li>
-            <li><a href="service-details.html">Graphic Designing</a></li>
-            <li><a href="service-details.html">SEO Services</a></li>
-            <li><a href="get-started.html">Consulting</a></li>
+            <li><a href="#services">Digital Marketing</a></li>
+            <li><a href="#services">Web Development</a></li>
+            <li><a href="#services">Graphic Designing</a></li>
+            <li><a href="#services">SEO Services</a></li>
           </ul>
         </div>
 
         <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
           <h4>Contact Us</h4>
-          <p>A108 Adam Street</p>
-          <p>New York, NY 535022</p>
-          <p>United States</p>
-          <p class="mt-4"><strong>Phone:</strong> <span>+1 5589 55488 55</span></p>
-          <p><strong>Email:</strong> <span>info@example.com</span></p>
+          <p>Innovista, Defence Central  Library</p>
+          <p>Sunset Boulevard, Phase 2 Extension Road</p>
+          <p>Karachi</p>
+          <p class="mt-4"><strong>Phone:</strong> <span>+92 303 2590468</span></p>
+          <p><strong>Email:</strong> <span>dtcpakistani@gmail.com</span></p>
         </div>
+
       </div>
     </div>
 
     <div class="container copyright text-center mt-4">
-      <p>© <span>Copyright</span> <strong class="px-1 sitename">Digital Transformation Company Pakistan</strong> <span>All Rights Reserved</span></p>
+      <p>© <span>Copyright</span> <strong class="px-1 sitename">DTC Pakistan</strong> <span>All Rights Reserved</span></p>
       <div class="credits">
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        <!-- Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> -->
       </div>
     </div>
+
   </footer>
+
 
   <!-- Floating Contact Buttons -->
   <div class="floating-contact-buttons">
