--- a/service-details.html
+++ b/service-details.html
@@ -121,15 +121,15 @@
   </main>
 
   <footer id="footer" class="footer">
+
     <div class="container footer-top">
       <div class="row gy-4">
         <div class="col-lg-5 col-md-12 footer-about">
           <a href="index.html" class="logo d-flex align-items-center">
-            <!-- <span>Your Software House</span> -->
 <img src="assets/img/dtcpak logo.png" alt="Your Software House Logo" class="img-fluid" style="max-height: 100px; width: auto;">      </a>
 
           </a>
-          <p>Empowering your digital future with innovative solutions and expert services.</p>
+          <p>We are a leading software house specializing in digital marketing, web development, graphic designing, and SEO services to help businesses succeed in the digital world.</p>
           <div class="social-links d-flex mt-4">
             <a href=""><i class="bi bi-twitter-x"></i></a>
             <a href=""><i class="bi bi-facebook"></i></a>
@@ -141,39 +141,45 @@
         <div class="col-lg-2 col-6 footer-links">
           <h4>Useful Links</h4>
           <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="service-details.html">Services</a></li>
-            <li><a href="privacy-policy.html">Privacy Policy</a></li>
-            <li><a href="terms.html">Terms and Conditions</a></li>
+            <li><a href="#hero">Home</a></li>
+            <li><a href="#about">About us</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="#contact">Contact</a></li>
           </ul>
         </div>
 
         <div class="col-lg-2 col-6 footer-links">
           <h4>Our Services</h4>
           <ul>
-            <li><a href="#">Digital Marketing</a></li>
-            <li><a href="#">Graphic Designing</a></li>
-            <li><a href="#">Web Development</a></li>
-            <li><a href="#">SEO</a></li>
+            <li><a href="#services">Digital Marketing</a></li>
+            <li><a href="#services">Web Development</a></li>
+            <li><a href="#services">Graphic Designing</a></li>
+            <li><a href="#services">SEO Services</a></li>
           </ul>
         </div>
 
         <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
           <h4>Contact Us</h4>
-          <p>123 Tech Street</p>
-          <p>Tech City, TC 12345</p>
-          <p>United States</p>
-          <p class="mt-4"><strong>Phone:</strong> <span>+1 555-123-4567</span></p>
-          <p><strong>Email:</strong> <span>info@yoursoftwarehouse.com</span></p>
+          <p>Innovista, Defence Central  Library</p>
+          <p>Sunset Boulevard, Phase 2 Extension Road</p>
+          <p>Karachi</p>
+          <p class="mt-4"><strong>Phone:</strong> <span>+92 303 2590468</span></p>
+          <p><strong>Email:</strong> <span>dtcpakistani@gmail.com</span></p>
         </div>
+
       </div>
     </div>
 
     <div class="container copyright text-center mt-4">
-      <p>© 2025 Your Software House. All Rights Reserved</p>
+      <p>© <span>Copyright</span> <strong class="px-1 sitename">DTC Pakistan</strong> <span>All Rights Reserved</span></p>
+      <div class="credits">
+        <!-- Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> -->
+      </div>
     </div>
+
   </footer>
+
 
   <!-- Floating Contact Buttons -->
   <div class="floating-contact-buttons">
